# avr-shift-registers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-kits.json  doxygen.conf
simavr/: CMakeLists.txt  main.c  main.i
src/sr/: CMakeLists.txt  data_position.c  piso_shift_register.c  seduce.h  shift_register.c  shift_register_internal.h  sipo_shift_register.c  util.c
